engine test cases refactored